<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpGeneratorActivity"
    android:orientation="vertical">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/otpBack"
        android:layout_marginLeft="@dimen/Login_text_view_margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginTop="@dimen/login_email_margin_top"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:textSize="@dimen/Main_text_size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otpTv2"
        android:text="@string/otp_verification_tv1"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/Login_text_view_margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:textSize="@dimen/Main_text_size"
        android:textColor="@color/register_tv_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otpTv3"
        android:text="@string/otp_verification_tv2"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/Login_text_view_margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:textSize="@dimen/login_bottom_textsize"
        android:layout_marginTop="@dimen/Main_heading_marginTop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:paddingRight="@dimen/margin_right">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit1"
        android:layout_marginLeft="@dimen/Login_text_view_margin_left"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/login_email_margin_top"
        android:gravity="center"
        android:maxLength="1"
        />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit2"
            android:layout_marginLeft="@dimen/Login_text_view_margin_left"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_email_margin_top"
            android:gravity="center"
            android:maxLength="1"

            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit3"
            android:layout_marginLeft="@dimen/Login_text_view_margin_left"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_email_margin_top"
            android:gravity="center"
            android:maxLength="1"

            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit4"
            android:layout_marginLeft="@dimen/Login_text_view_margin_left"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/login_email_margin_top"
            android:gravity="center"
            android:maxLength="1"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_email_margin_top">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otpButton"
            android:layout_weight="2"
            android:text="@string/otp_button1"
            android:layout_marginLeft="@dimen/Login_text_view_margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/login_email_margin_top"
            android:background="@drawable/otp_button_background_border"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otpButton1"
            android:layout_weight="2"
            android:text="@string/otp_button2"
            android:layout_marginLeft="@dimen/Login_text_view_margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/login_email_margin_top"
            android:background="@color/Main_background_color"
            android:textColor="@color/Main_text_color"
            />

    </LinearLayout>

</LinearLayout>